fix ios header overlapping

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,13 @@ html {
   -webkit-tap-highlight-color: transparent;
 }
 
+@supports (padding: env(safe-area-inset-top)) {
+  body {
+    padding-left: env(safe-area-inset-left);
+    padding-right: env(safe-area-inset-right);
+  }
+}
+
 body {
   @apply bg-neutral-50 text-neutral-900 antialiased;
   @apply dark:bg-neutral-950 dark:text-neutral-100;
